Add available models and apis

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 OPEN_AI_KEY=
-COMPLETION_API=
-COMPLETION_MODEL=
-GEN_IMAGE_API=
-GEN_IMAGE_MODEL=
+COMPLETION_API=https://api.openai.com/v1/completions
+COMPLETION_MODEL="davinci-002"
+GEN_IMAGE_API=https://api.openai.com/v1/images/generations
+GEN_IMAGE_MODEL="dall-e-2"
