--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dotenv": "^3.4.10",
     "react-native-gifted-chat": "^2.4.0"
   },
   "devDependencies": {
